bug 923  - fixed z-index of datepicker

--- a/src/search-results/search-results.scss
+++ b/src/search-results/search-results.scss
@@ -1168,7 +1168,7 @@
 	height: 313px;
 	margin: 10px 20px;
 	transform: translateX(calc(-100% + 203px)); 
-	z-index: 500;
+	z-index: 1500;
 }
 
 .dp-permanent {
